objects/AccountLob__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LOB Classifications</relationshipLabel>
        <relationshipName>LOB_Classifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LOB1_2_3__c</fullName>
        <formula>TEXT(LOB1__c) &amp; &quot;/&quot; &amp; TEXT(LOB2__c) &amp; &quot;/&quot; &amp; TEXT(LOB3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB1/2/3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB1__c</fullName>
        <label>LOB1</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB2__c</fullName>
        <label>LOB2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB1__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>LOB2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB3__c</fullName>
        <label>LOB3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>LOB3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <description>Unique ID, populated by the AccountLobTrigger.</description>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>LOB Classification</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>LOB Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOB Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotChangeLobValues</fullName>
        <active>true</active>
        <description>Enforces that a user cannot change the LOB1/2/3 fields of an existing LOB Classification. This  has an impact on how the programmatic sharing access is provided. Do not deactivate it.</description>
        <errorConditionFormula>$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True &amp;&amp;
NOT ( $Permission.LockedAccountBypass ) &amp;&amp;

(NOT(IsNew()) &amp;&amp;
(ISCHANGED(LOB1__c) || ISCHANGED(LOB2__c) || ISCHANGED(LOB3__c)) 
)</errorConditionFormula>
        <errorMessage>You cannot change the LOB1/2/3 values. Remove this classification and create a new one</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockedPrimaryLOB</fullName>
        <active>true</active>
        <description>Primary LOB is mastered in ERP for Customers, Principals and Suppliers,</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 
NOT ( $Permission.LockedAccountBypass ), 
Account__r.LockedForIntegration__c, 
Primary__c
)</errorConditionFormula>
        <errorMessage>You are not allowed to change the primary LOB on customers. You can edit this information in your ERP system</errorMessage>
    </validationRules>
</CustomObject>